[package]
name = "vehr_alns"
version = "0.1.0"
edition = "2018"

license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oorandom = "11.1.3"
vehr_core = { git = "https://github.com/1crcbl/vehr-core" }

[dev-dependencies]
tspf = "0.3.1"